force-app/main/default/objects/Nine_Box_Assessment__c/Nine_Box_Assessment__c.object-meta.xml
<CustomObject>
    <description>Used to capture 9 box assessments</description>
    <label>9 Box Assessment</label>
    <nameField>
        <displayFormat>9b-{000000}</displayFormat>
        <label>9 Box Assessment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>9 Box Assessments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>