force-app/main/default/objects/Nine_Box_Assessment__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Employee linked to assessment</description>
    <inlineHelpText>Select the employee</inlineHelpText>
    <label>Employee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>9 Box Assessments</relationshipLabel>
    <relationshipName>X9_Box_Assessments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>