force-app/main/default/objects/Nine_Box_Assessment__c/fields/Performance_tracking__c.field-meta.xml
<CustomField>
    <fullName>Performance_tracking__c</fullName>
    <description>Select the performance level of the employee</description>
    <inlineHelpText>1. Low performance indicates that the employee’s skills, attitude, and experience do not match the job requirements. This means the employee is failing to meet their targets. 
2. Moderate performance indicates a partial match between the job requirements and the employee’s skills, attitude, and experience. These employees are hitting most of their targets.
3. High performance indicates the employee completely matches the job requirements and is successfully hitting their targets.</inlineHelpText>
    <label>Performance tracking</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Low</fullName>
            </value>
            <value>
                <fullName>2 - Moderate</fullName>
            </value>
            <value>
                <fullName>3 - High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>