force-app/main/default/objects/Nine_Box_Assessment__c/fields/Potential_assessments__c.field-meta.xml
<CustomField>
    <fullName>Potential_assessments__c</fullName>
    <inlineHelpText>1. At low potential, the employee is working to their full potential and is not expected to improve. 
2. At moderate potential, an employee has the potential to develop further in their current role. 
3. At high potential, an employee is eligible for a promotion.</inlineHelpText>
    <label>Potential assessments</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Low</fullName>
            </value>
            <value>
                <fullName>2 - Moderate</fullName>
            </value>
            <value>
                <fullName>3 - High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>